Vagrant: Only install pip if it is not yet present
Previously it would always report "changed"

ref: https://raymii.org/s/tutorials/Ansible_-_Only_if_a_file_exists_or_does_not_exist.html

--- a/setup.yml
+++ b/setup.yml
@@ -29,9 +29,13 @@
            - tcl8.6-dev
            - tk8.6-dev
            - python-tk
+    - stat: path=/usr/local/bin/pip
+      register: pip_installed
+
     - name: Install pip
       become: yes
       easy_install: name=pip state=latest
+      when: pip_installed.stat.exists == False
 
     - name: Install latest core python libraries via pip
       become: yes
