Remove ansible_local, add easy-install to vagrant
ansible_local required a trick which might not
work depending on the host setup. Not worth it. The new file requires local
ansible, possibly in a new version. Tested on 2.1

Adding python-setuptools gives easy-install, not sure how this was missed before.

--- a/setup.yml
+++ b/setup.yml
@@ -14,6 +14,8 @@
       become: yes
       apt: name={{item}} state=installed
       with_items:
+           # easy_install which will be sued to install pip
+           - python-setuptools
            - libpython3.4-dev
            # not strictly necessary for the project as it runs on 3.4
            - libpython2.7-dev
